Fix tooltip z-index on tag in multi-select

--- a/@utahdts/utah-design-system/css/6-components/base-components/forms/_multi-select-input.scss
+++ b/@utahdts/utah-design-system/css/6-components/base-components/forms/_multi-select-input.scss
@@ -19,6 +19,10 @@
 
     &__wrapper {
       position: relative;
+
+      .tooltip__wrapper {
+        z-index: 2001;
+      }
     }
 
     @include tools-index.form-ele-hover-medium;
